# cookiecutter-py-project

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  cookiecutter.json  pyproject.toml  tox.ini
.github/workflows/: test.yml
hooks/: post_gen_project.py
tests/: test_project_generation.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml  tox.ini
{{cookiecutter.project_slug}}/.github/workflows/: release.yml  tests.yml
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: cli.py
