[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cookiecutter-py-project"
version = "0.1.0"
description = "A modern Python project template using cookiecutter with opinionated defaults"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Michael Yagi", email = "michael.yagi@example.com"},
]
keywords = ["cookiecutter", "template", "python", "uv", "modern"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = []

[dependency-groups]
dev = [
    { include-group = "test" },
    "pre-commit>=3.5.0",
    "tox>=4.0.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cookies>=0.7.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "tox-uv>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/m1yag1/cookiecutter-py-project"
Repository = "https://github.com/m1yag1/cookiecutter-py-project.git"
Issues = "https://github.com/m1yag1/cookiecutter-py-project/issues"

[tool.hatch.build.targets.wheel]
packages = ["hooks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
